--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ header {
   padding-top: 30px;
   min-height: 70px;
   border-bottom: #77ff77 3px solid;
-  //background: linear-gradient(rgba(53, 66, 74, 0.85), rgba(53, 66, 74, 1));
 }
 
 header a {
@@ -159,12 +158,13 @@ header nav .on {
 /* ------------ Boxes ------------ */
 
 #boxes {
+  display: grid;
   padding-top: 30px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
 }
 
 #boxes .box {
-  width: 32%;
-  float: left;
   text-align: center;
 }
 
@@ -173,14 +173,12 @@ header nav .on {
 }
 
 #boxes .box2 {
-  margin: 5px;
   border: transparent 1px solid;
   padding: 20px;
   box-sizing: border-box;
-  width: 32%;
+  width: 100%;
   height: 500px;
   background: linear-gradient(rgba(0,0,0,0.04),rgba(0,0,0,0.2));
-  float: left;
   text-align: center;
   opacity: 0.7;
   border-radius: 6px;
@@ -276,7 +274,6 @@ footer {
   width: 27%;
   border-radius: 5px;
   background: #35424a;
-  //text-align: center;
   color: white;
 }
 
@@ -320,7 +317,6 @@ footer {
 
 #project_sidebar h2 {
   color: #77ff77;
-  //background: #243139;
 }
 
 #project_sidebar ul {
@@ -333,7 +329,6 @@ footer {
   line-height: 70px;
   border-top: transparent 1px solid;
   border-bottom: transparent 1px solid;
-  //background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.1));
 }
 
 #project_sidebar a {
@@ -449,4 +444,18 @@ footer {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+/* ------------ Media Query ------------ */
+
+@media screen and (max-width: 600px) {
+
+  header #logo, header li {
+    float: none;
+    text-align: center;
+  }
+
+  #boxes {
+      grid-template-columns: 100%;
+  }
 }
