--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ header nav .on {
 }
 
 #news h1 {
+  font-size : 1.2rem;
   float: left;
 }
 
@@ -157,22 +158,22 @@ header nav .on {
 
 /* ------------ Boxes ------------ */
 
-#boxes {
+.boxes_wrapper {
   display: grid;
   padding-top: 30px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 15px;
 }
 
-#boxes .box {
+.boxes_wrapper .box {
   text-align: center;
 }
 
-#boxes .box img {
+.boxes_wrapper .box img {
   width: 100px;
 }
 
-#boxes .box2 {
+.boxes_wrapper .box2 {
   border: transparent 1px solid;
   padding: 20px;
   box-sizing: border-box;
@@ -185,7 +186,7 @@ header nav .on {
   cursor: pointer;
 }
 
-#boxes .box2 img {
+.boxes_wrapper .box2 img {
   max-width: 100%;
   max-height: 80%;
 }
@@ -450,12 +451,58 @@ footer {
 
 @media screen and (max-width: 600px) {
 
-  header #logo, header li {
+  header #logo, header nav, #news h1, #news_email, #news_button {
     float: none;
     text-align: center;
+    width: 100%;
   }
 
-  #boxes {
+  header {
+    padding-top: 10px;
+  }
+
+  header nav {
+    margin-top: -15px;
+    margin-bottom: 4px;
+  }
+
+  header ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  header li {
+    margin: 0;
+    padding: 0;
+  }
+
+  .boxes_wrapper {
       grid-template-columns: 100%;
   }
+
+  #news {
+    margin:0;
+  }
+
+  #news form {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    margin: -10px 0 10px 0;
+  }
+
+  #news_button {
+    width: 100%;
+    height:100%;
+  }
+
+  #banner {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
+                url(../load/img/background.jpg) no-repeat -200px -200px;
+  }
+
+  #about_main, #about_side {
+    float: none;
+    width: 100%;
+  }
+
 }
