--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,12 @@ footer {
   border: 1px solid darkgray;
   width: 100%;
 }
+#projects embed.video {
+  background: #f4f4f4;
+  border: 1px solid darkgray;
+  width: 100%;
+  height: 350px;
+}
 
 #projects embed#one {
   width: 100%;
