--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 * {
--webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* ------------ Global ------------ */
@@ -46,6 +47,12 @@ body {
   left: 0;
   text-align: center;
   z-index: -1;
+}
+
+.border {
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #999;
 }
 
 .grayAnim img {
@@ -176,6 +183,7 @@ header nav .on {
 .boxes_wrapper .box2 {
   border: transparent 1px solid;
   padding: 20px;
+  padding-top: 30px;
   box-sizing: border-box;
   width: 100%;
   height: 500px;
@@ -184,12 +192,28 @@ header nav .on {
   opacity: 0.7;
   border-radius: 6px;
   cursor: pointer;
+  display: grid;
+  grid-template-rows: 5fr 1fr;
 }
 
-.boxes_wrapper .box2 img {
-  max-width: 100%;
-  max-height: 80%;
+
+.boxes_wrapper .box2 .box-display {
+  display: flex;
+  align-items: center;
 }
+
+.boxes_wrapper .box2 .box-display img {
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.boxes_wrapper .box2 .box-description {
+  /**/
+}
+
+
+
 
 /* ------------ Footer ------------ */
 
