--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   font-size: 15px;
   line-height: 1.5;
   width: 100%;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
   background-color: #f4f4f4;
@@ -22,6 +23,7 @@ body {
   width: 80%;
   margin: auto;
   overflow: hidden;
+  min-height: calc(100% - 186px);
 }
 
 .button_1 {
@@ -70,6 +72,10 @@ code, pre {
 pre {
   max-height: 18em;
   border: 1px solid #dfdfdf
+}
+main {
+  min-height: calc(100vh - 80px);
+  margin-bottom: 80px;
 }
 
 /* ------------ Header ------------ */
@@ -121,7 +127,7 @@ header nav .on {
 #banner {
   min-height: 400px;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
-              url(../load/img/background.jpg) no-repeat -200px -500px;
+              url(../load/img/background.jpg) no-repeat 0 -500px;
   text-align: center;
   color: white;
 }
@@ -213,18 +219,22 @@ header nav .on {
 }
 
 
-
-
 /* ------------ Footer ------------ */
 
 footer {
-  margin-top: 80px;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  margin-top: -50px;
   background: #77bb77;
   color: white;
-  text-align: center;
 }
+
+footer p {
+  display: block;
+  margin: auto;
+}
+
 
 /* ------------ About us ------------ */
 
@@ -241,7 +251,6 @@ footer {
 
 #about {
   margin-top: 30px;
-  margin-bottom: 225px;
 }
 
 /* ------------ Projects ------------ */
